# the-config

./: .envrc  .gitignore  .sops.yaml  README.md  devshell.nix  flake.nix  meow.nix  secret-secrets.yml  the-config.code-workspace
common/: composter.nix  composter.py  constants.nix  default.nix  overlays.nix  utils.nix
common/all-users/: default.nix
common/blocks/: docker-proxy-server.nix  docker-proxy.nix  mailcow.nix  nix-settings.nix  progtime.nix  traefik.nix  vds-networking.nix
common/root/: default.nix
common/system/: default.nix  podman.nix
common/utils/: vanutp-registry.nix
dull-vessel/: default.nix
dull-vessel/all-users/: default.nix
dull-vessel/home/: apps.nix  default.nix  dev.nix  hyprland.nix  lockscreen.nix  packages.nix  secrets.nix  security.nix  shell.nix  theme.nix  waybar.nix  wezterm.lua
dull-vessel/root/: default.nix
dull-vessel/system/: audio.nix  default.nix  dev.nix  fcitx5.nix  hardware-configuration.nix  hardware.nix  hyprland.nix  login.nix  portals.nix  secrets.yml  security.nix  strongswan.nix  wireguard.nix
dull-vessel/users-common/: default.nix
hosts/collective/: default.nix  gravity_m.nix  ystalx.nix
hosts/dull-vessel/: default.nix
hosts/dull-vessel/home/ignis/: config.py  default.nix  pyproject.toml  utils.py
hosts/dull-vessel/home/ignis/widgets/bar/: __init__.py
hosts/dull-vessel/home/ignis/widgets/bar/modules/: clock.py  keyboard.py  media.py  notifications.py  tray.py  volume.py  workspaces.py
hosts/memory-hole/: lumi.nix  (+1 more)
utils/: dco_to_nix.py  getHostConfig.nix  makeWg0.nix  mkSystem.nix  modules.nix
(+334 files in other folders)
